# openapi/openapi.yaml
@@ -281,12 +281,12 @@ paths:
                 required:
                   - chairs
                   - retrieved_at
-  /provider/register:
+  /owner/register:
     post:
       tags:
-        - provider
-      summary: 椅子プロバイダーが登録を行う
-      operationId: provider-post-register
+        - owner
+      summary: 椅子のオーナー自身が登録を行う
+      operationId: owner-post-register
       requestBody:
         content:
           application/json:
@@ -295,12 +295,12 @@ paths:
               properties:
                 name:
                   type: string
-                  description: プロバイダー名
+                  description: オーナー名
               required:
                 - name
       responses:
         "201":
-          description: 椅子プロバイダー登録が完了した
+          description: 椅子のオーナー登録が完了した
           content:
             application/json:
               schema:
@@ -308,15 +308,15 @@ paths:
                 properties:
                   id:
                     type: string
-                    description: プロバイダーID
+                    description: オーナーID
                 required:
                   - id
-  /provider/sales:
+  /owner/sales:
     get:
       tags:
-        - provider
-      summary: 椅子プロバイダーが指定期間の全体・椅子ごと・モデルごとの売上情報を取得する
-      operationId: provider-get-sales
+        - owner
+      summary: 椅子のオーナーが指定期間の全体・椅子ごと・モデルごとの売上情報を取得する
+      operationId: owner-get-sales
       parameters:
         - name: since
           in: query
@@ -338,7 +338,7 @@ paths:
                 properties:
                   total_sales:
                     type: integer
-                    description: プロバイダー全体の売上
+                    description: オーナーが管理する椅子全体の売上
                   chairs:
                     type: array
                     items:
@@ -377,12 +377,12 @@ paths:
                   - total_sales
                   - chairs
                   - models
-  /provider/chairs:
+  /owner/chairs:
     get:
       tags:
-        - provider
-      summary: 椅子プロバイダーが管理している椅子の一覧を取得する
-      operationId: provider-get-chairs
+        - owner
+      summary: 椅子のオーナーが管理している椅子の一覧を取得する
+      operationId: owner-get-chairs
       responses:
         "200":
           description: OK
@@ -426,12 +426,12 @@ paths:
                         - total_distance
                 required:
                   - chairs
-  /provider/chairs/{chair_id}:
+  /owner/chairs/{chair_id}:
     get:
       tags:
-        - provider
+        - owner
       summary: 管理している椅子の詳細を取得する
-      operationId: provider-get-chair-detail
+      operationId: owner-get-chair-detail
       parameters:
         - name: chair_id
           in: path
