# webapp/go/chair_handlers.go
@@ -21,7 +21,7 @@ type postChairRegisterResponse struct {
 }
 
 func chairPostRegister(w http.ResponseWriter, r *http.Request) {
-	provider := r.Context().Value("provider").(*Provider)
+	owner := r.Context().Value("owner").(*Owner)
 
 	req := &postChairRegisterRequest{}
 	if err := bindJSON(r, req); err != nil {
@@ -38,8 +38,8 @@ func chairPostRegister(w http.ResponseWriter, r *http.Request) {
 
 	accessToken := secureRandomStr(32)
 	_, err := db.Exec(
-		"INSERT INTO chairs (id, provider_id, name, model, is_active, access_token, created_at, updated_at) VALUES (?, ?, ?, ?, ?, ?, isu_now(), isu_now())",
-		chairID, provider.ID, req.Name, req.Model, false, accessToken,
+		"INSERT INTO chairs (id, owner_id, name, model, is_active, access_token, created_at, updated_at) VALUES (?, ?, ?, ?, ?, ?, isu_now(), isu_now())",
+		chairID, owner.ID, req.Name, req.Model, false, accessToken,
 	)
 	if err != nil {
 		writeError(w, http.StatusInternalServerError, err)
